--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"type": "module",
 	"dependencies": {
 		"@auth/sveltekit": "^0.2.0",
+		"@prisma/client": "^4.9.0",
 		"next-auth": "^4.18.10"
 	}
 }
