--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prisma": "^4.9.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-hamburgers": "^4.0.1",
 		"svelte-heros-v2": "^0.3.11",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.2.4",
