--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"dependencies": {
 		"@auth/sveltekit": "^0.2.0",
 		"@prisma/client": "^4.9.0",
-		"next-auth": "^4.18.10"
+		"next-auth": "^4.18.10",
+		"node-cache": "^5.1.2"
 	}
 }
