Voeg quirrel toe

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,15 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://ibs_dev:dannytrekbak@mariadb.dev.nierot.com:4401/ibs3?schema=public"
+DATABASE_URL="mysql://ibs3:password@mariadb:3306/ibs3?schema=public"
 
-# GITHUB_ID, GITHUB_SECRET
-GITHUB_ID = ''
-GITHUB_SECRET = ''
+IBS_CLIENT_ID = "CLIENT_ID"
+IBS_CLIENT_SECRET = "CLIENT_SECRET"
+IBS_ISSUER = 'https://auth.example.com/application/o/ibs/'
+
+ORIGIN = "https://dev.example.com"
+QUIRREL_BASE_URL = "https://dev.example.com"
+
+DISCORD_NOTIFICATION_WEBHOOK = "https://discord.com/api/webhooks/server/key"
+
+DISABLE_TELEMETRY=true
