--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev --host 0.0.0.0",
+		"dev": "concurrently \"vite dev --host 0.0.0.0\" \"quirrel\"",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -19,6 +19,7 @@
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.13",
 		"classnames": "^2.3.2",
+		"concurrently": "^7.6.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -43,6 +44,7 @@
 		"@auth/sveltekit": "^0.2.0",
 		"@prisma/client": "^4.9.0",
 		"next-auth": "^4.18.10",
-		"node-cache": "^5.1.2"
+		"node-cache": "^5.1.2",
+		"quirrel": "^1.13.1"
 	}
 }
