--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
 		"@auth/sveltekit": "^0.2.0",
 		"@prisma/client": "^4.9.0",
 		"next-auth": "^4.18.10",
-		"svelte-modals": "^1.2.1",
 		"node-cache": "^5.1.2",
-		"quirrel": "^1.13.1"
+		"quirrel": "^1.13.1",
+		"svelte-modals": "^1.2.1",
+		"zod": "^3.20.6"
 	}
 }
