Je kan nu getrokken bakken, all time en per week bekijken. Wel wat code duplicatie maar daar doe je niks aan

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ QUIRREL_BASE_URL = "https://dev.example.com"
 DISCORD_NOTIFICATION_WEBHOOK = "https://discord.com/api/webhooks/server/key"
 
 DISABLE_TELEMETRY=true
+
+COLOSSEUM_IP = "192.0.0.1"
+CAMPUS_IP = "82.183."
