--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"prisma": "^4.9.0",
+		"prisma": "^4.10.1",
 		"sass": "^1.58.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
@@ -43,10 +43,10 @@
 	"type": "module",
 	"dependencies": {
 		"@auth/sveltekit": "^0.2.0",
-		"@prisma/client": "^4.9.0",
+		"@prisma/client": "^4.10.1",
 		"next-auth": "^4.18.10",
-		"svelte-modals": "^1.2.1",
 		"node-cache": "^5.1.2",
-		"quirrel": "^1.13.1"
+		"quirrel": "^1.13.1",
+		"svelte-modals": "^1.2.1"
 	}
 }
