env: add authentik

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ DATABASE_URL="mysql://ibs3:password@mariadb:3306/ibs3?schema=public"
 IBS_CLIENT_ID = "CLIENT_ID"
 IBS_CLIENT_SECRET = "CLIENT_SECRET"
 IBS_ISSUER = 'https://auth.example.com/application/o/ibs/'
+AUTHENTIK_BASE_URL = "https://auth.example.com"
+AUTHENTIK_GROUP_NAME = 'ibs3_users'
+AUTHENTIK_TOKEN = 'aaasDJKASJDHSAJKHDLOIJASHDIABDSKJASJKDJKAS'
 
 ORIGIN = "https://dev.example.com"
 QUIRREL_BASE_URL = "https://dev.example.com"
