--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "concurrently \"vite dev --host 0.0.0.0\" \"quirrel\"",
+		"dev:backend": "nodemon --watch backend -e ts --exec \"ts-node-esm ./backend/index.ts\"",
+		"dev:frontend": "vite dev --host 0.0.0.0",
+		"dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -15,6 +17,7 @@
 		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@types/node-cron": "^3.0.7",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.13",
@@ -44,8 +47,12 @@
 	"dependencies": {
 		"@auth/sveltekit": "^0.2.0",
 		"@prisma/client": "^4.9.0",
+		"@types/express": "^4.17.17",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
 		"next-auth": "^4.18.10",
 		"node-cache": "^5.1.2",
+		"node-cron": "^3.0.2",
 		"quirrel": "^1.13.1",
 		"svelte-modals": "^1.2.1",
 		"zod": "^3.20.6"
