docs: add nodemon

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"next-auth": "^4.18.10",
 		"node-cache": "^5.1.2",
 		"node-cron": "^3.0.2",
+		"nodemon": "^2.0.21",
 		"svelte-modals": "^1.2.1",
 		"zod": "^3.20.6"
 	}
