general: Add minio client

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,9 @@ QUIRREL_BASE_URL = "https://dev.example.com"
 DISCORD_NOTIFICATION_WEBHOOK = "https://discord.com/api/webhooks/server/key"
 
 DISABLE_TELEMETRY=true
+
+MINIO_SECRET=secret
+MINIO_KEY=username
+MINIO_ENDPOINT=minio.example.com
+RECEIPT_BUCKET=ibs3-dev
+PUBLIC_RECEIPT_URL=https://minio.example.com/ibs3-dev/
