--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@types/minio": "^7.0.17",
 		"@types/node-cron": "^3.0.7",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -50,6 +51,7 @@
 		"@types/express": "^4.17.17",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"minio": "^7.0.32",
 		"next-auth": "^4.18.10",
 		"node-cache": "^5.1.2",
 		"node-cron": "^3.0.2",
