env: add file upload

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ AUTHENTIK_TOKEN = 'aaasDJKASJDHSAJKHDLOIJASHDIABDSKJASJKDJKAS'
 ORIGIN = "https://dev.example.com"
 
 DISCORD_NOTIFICATION_WEBHOOK = "https://discord.com/api/webhooks/server/key"
+
+UPLOAD_FOLDER=./static/upload
