file upload: add public upload URL

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,4 @@ ORIGIN = "https://dev.example.com"
 DISCORD_NOTIFICATION_WEBHOOK = "https://discord.com/api/webhooks/server/key"
 
 UPLOAD_FOLDER=./static/upload
+PUBLIC_UPLOAD_URL=/upload/
