--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# SvelteKit ENV
+ORIGIN = "https://dev.oddinvictus.nl"
+PROTOCOL_HEADER=x-forwarded-proto
+HOST_HEADER=x-forwarded-host
 
 DATABASE_URL="mysql://ibs3:password@mariadb:3306/ibs3?schema=public"
 
@@ -19,3 +18,6 @@ DISCORD_NOTIFICATION_WEBHOOK = "https://discord.com/api/webhooks/server/key"
 
 UPLOAD_FOLDER=./static/upload
 PUBLIC_UPLOAD_URL=/upload/
+
+PUBLIC_GITHUB_LINK="https://github.com/ODDInvictus/ibs3"
+PUBLIC_VERSION="1.0.0"
