docs: fix local ip in `.env.example`

--- a/.env.example
+++ b/.env.example
@@ -23,5 +23,5 @@ PUBLIC_GITHUB_LINK="https://github.com/ODDInvictus/ibs3"
 PUBLIC_VERSION="1.0.0"
 
 # Strafbakken
-COLOSSEUM_IP = "192.0.0.1"
+COLOSSEUM_IP = "192.168."
 CAMPUS_IP = "82.183."
