feat: poging 2 voor drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -8,11 +8,30 @@ workspace:
 steps:
 - name: deploy
   image: plugins/docker
+  when:
+    branch:
+    - drone
+  tags:
+  - latest
+  commands:
+  - export PUBLIC_GIT_REV=$DRONE_COMMIT
+  - export PUBLIC_GIT_REV_SHORT=`expr $DRONE_COMMIT 0 7`
+  - export PUBLIC_GIT_BRANCH=$DRONE_BRANCH
   settings:
     username:
       from_secret: DOCKER_HUB_USERNAME
     password:
       from_secret: DOCKER_HUB_PASSWORD
     repo: nierot/ibs3
-    tags:
-    - latest
+
+- name: notify
+  image: appleboy/drone-discord
+  settings:
+    webhook_id:
+      from_secret: DISCORD_WEBHOOK_ID
+    webhook_token:
+      from_secret: DISCORD_WEBHOOK_TOKEN
+  when:
+    status:
+    - success
+    - failure
