--- a/.drone.yml
+++ b/.drone.yml
@@ -14,9 +14,7 @@ steps:
   tags:
   - latest
   commands:
-  - export PUBLIC_GIT_REV=$(echo $DRONE_COMMIT)
-  - export PUBLIC_GIT_REV_SHORT=$(echo `expr $DRONE_COMMIT 0 7`)
-  - export PUBLIC_GIT_BRANCH=$(echo $DRONE_BRANCH)
+  - sh -c ./drone.sh
   settings:
     username:
       from_secret: DOCKER_HUB_USERNAME
