--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
   tags:
   - latest
   commands:
-  - sh -c ./drone.sh
+  - ./drone.sh
   settings:
     username:
       from_secret: DOCKER_HUB_USERNAME
