drone: Fix YAML

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,8 +24,9 @@ steps:
     webhook_token:
       from_secret: DISCORD_WEBHOOK_TOKEN
     message: "{{#success build.status}}✅{{else}}❌{{/success}}  Repository `[{{repo.name}}/{{commit.branch}}]` triggered by event `[{{uppercase build.event}}]` for build.\n    - Commit [[{{commit.sha}}]({{commit.link}})]\n    - Author `[{{commit.author}} / {{commit.email}}]`\n    - Message: {{commit.message}}    - Drone build [[#{{build.number}}]({{build.link}})] reported `[{{uppercase build.status}}]` at `[{{datetime build.finished \"2006.01.02 15:04\" \"\"}}]`\n​"
-    when:
-      status: [ success, failure, changed ]
+    username: Miel Monteur
+  when:
+    status: [ success, failure, changed ]
 
 trigger:
   branch:
