--- a/.drone.yml
+++ b/.drone.yml
@@ -23,7 +23,13 @@ steps:
       from_secret: DISCORD_WEBHOOK_ID
     webhook_token:
       from_secret: DISCORD_WEBHOOK_TOKEN
-    message: "{{#success build.status}}✅{{else}}❌{{/success}}  Repository `[{{repo.name}}/{{commit.branch}}]` triggered by event `[{{uppercase build.event}}]` for build.\n    - Commit [[{{commit.sha}}]({{commit.link}})]\n    - Author `[{{commit.author}} / {{commit.email}}]`\n    - Message: {{commit.message}}    - Drone build [[#{{build.number}}]({{build.link}})] reported `[{{uppercase build.status}}]` at `[{{datetime build.finished \"2006.01.02 15:04\" \"\"}}]`\n​"
+    message: >
+      {{#success build.status}}🎉 IBS build is geslaagd! {{else}}👎 IBS build is stukkie wukkie 😢{{/success}}
+      Repo `[{{repo.name}}/{{commit.branch}}]` getriggerd door `[{{uppercase build.event}}]`.
+      - Commit `[[{{commit.sha}}]({{commit.link}})]`    
+      - Door `[{{commit.author}} / {{commit.email}}]`    
+      - Onzin berichtje: {{commit.message}}\n    
+      - Drone build [[#{{build.number}}]({{build.link}})] heeft als status `[{{uppercase build.status}}]` om `[{{datetime build.finished \"2006.01.02 15:04\" \"\"}}]`\n​"
     username: Miel Monteur
   when:
     status: [ success, failure, changed ]
