--- a/.drone.yml
+++ b/.drone.yml
@@ -29,7 +29,7 @@ steps:
       - Commit `[[{{commit.sha}}]({{commit.link}})]`    
       - Door `[{{commit.author}} / {{commit.email}}]`    
       - Onzin berichtje: {{commit.message}}\n    
-      - Drone build [[#{{build.number}}]({{build.link}})] heeft als status `[{{uppercase build.status}}]` om `[{{datetime build.finished \"2006.01.02 15:04\" \"\"}}]`\n​"
+      - Drone build [[#{{build.number}}]({{build.link}})] heeft als status `[{{uppercase build.status}}]` om `[{{datetime build.finished \"2006.01.02 15:04\" \"\"}}]`\n​
     username: Miel Monteur
   when:
     status: [ success, failure, changed ]
