drone: fix yaml

--- a/.drone.yml
+++ b/.drone.yml
@@ -23,11 +23,11 @@ steps:
       from_secret: DISCORD_WEBHOOK_ID
     webhook_token:
       from_secret: DISCORD_WEBHOOK_TOKEN
-    message: |
-      {{#success build.status}}Huts! IBS build is geslaagd!{{else}}Sip, de build is gefaald {{/success}}
-      Commit: [[{{commit.sha}}]({{commit.link}})]
-      Door: [{{commit.author}} / {{commit.email}}]
-      Bericht: {{commit.message}}
+    message: >
+      {{#success build.status}}Huts! IBS build is geslaagd!{{else}}Sip, de build is gefaald {{/success}}\n
+      Commit: [[{{commit.sha}}]({{commit.link}})]\n
+      Door: [{{commit.author}} / {{commit.email}}]\n
+      Bericht: {{commit.message}}\n
       Build: [[#{{build.number}}]({{build.link}})]
     username: Miel Monteur
   when:
