--- a/.drone.yml
+++ b/.drone.yml
@@ -24,11 +24,12 @@ steps:
     webhook_token:
       from_secret: DISCORD_WEBHOOK_TOKEN
     message: >
-      {{#success build.status}} Huts! IBS build is geslaagd! {{else}} Sip, de build is gefaald {{/success}} \n
-      Commit: [[{{commit.sha}}]({{commit.link}})]\n
-      Door: [{{commit.author}} / {{commit.email}}]\n
-      Bericht: {{commit.message}}\n
-      Build: [[#{{build.number}}]({{build.link}})]
+      Nieuwe build voor IBS3!
+      - Commit: [[{{commit.sha}}]({{commit.link}})]\n
+      - Door: [{{commit.author}} / {{commit.email}}]\n
+      - Bericht: {{commit.message}}\n
+      - Build: [[#{{build.number}}]({{build.link}})]\n
+      - Status: {{build.success}}
     username: Miel Monteur
   when:
     status: [ success, failure, changed ]
