--- a/.drone.yml
+++ b/.drone.yml
@@ -23,13 +23,13 @@ steps:
       from_secret: DISCORD_WEBHOOK_ID
     webhook_token:
       from_secret: DISCORD_WEBHOOK_TOKEN
-    message: >
+    message: |
       Nieuwe build voor IBS3! \n
       - Commit: [[{{commit.sha}}]({{commit.link}})] \n
       - Door: [{{commit.author}} / {{commit.email}}] \n
       - Bericht: {{commit.message}} \n
       - Build: [[#{{build.number}}]({{build.link}})] \n
-      - Status: {{build.success}}
+      - Status: {{build.status}}
     username: Miel Monteur
   when:
     status: [ success, failure, changed ]
