drone: i hate markdown

--- a/.drone.yml
+++ b/.drone.yml
@@ -25,8 +25,8 @@ steps:
       from_secret: DISCORD_WEBHOOK_TOKEN
     message: |
       Nieuwe build voor IBS3! 
-      - Commit: [{{commit.sha}}]({{commit.link}}) 
-      - Door: [{{commit.author}}(https://github.com/{{commit.author}})]
+      - Commit: [[{{commit.sha}}]({{commit.link}})]
+      - Door: [[{{commit.author}}](https://github.com/{{commit.author}})]
       - Bericht: {{commit.message}} 
       - Build: [#{{build.number}}]({{build.link}}) 
       - Status: {{build.status}}
