env: Add tons of environment variables

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,18 @@ PUBLIC_VERSION="1.0.0"
 # Strafbakken
 COLOSSEUM_IP = "192.168."
 CAMPUS_IP = "82.183."
+
+# Email
+MAILCOW_API_URL=https://mail.example.com
+MAILCOW_API_KEY=
+
+EMAIL_DOMAIN = "example.com"
+EMAIL_SENDER = "Invictus Bier Systeem <ibs@example.com>"
+EMAIL_BACKEND_SENDER = "IBS Backend <ibs.backend@example.com>"
+ADMIN_EMAIL = "Admin <admin@example.com>"
+
+# Email SMTP
+SMTP_HOST = "smtp.example.com"
+SMTP_PORT = 587
+SMTP_USER = ""
+SMTP_PASSWORD = ""
