feat: Double strafbakken every month

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,8 @@ SMTP_HOST = "smtp.example.com"
 SMTP_PORT = 587
 SMTP_USER = ""
 SMTP_PASSWORD = ""
+
+CRONTAB_LDAP=0 6 * * *
+CRONTAB_EMAIL=0 7 * * *
+
+IBS_URL="https://example.com"
