--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/kit": "^1.15.2",
+		"@types/markdown-it": "^12.2.3",
 		"@types/minio": "^7.0.17",
 		"@types/node-cron": "^3.0.7",
+		"@types/sanitize-html": "^2.9.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.13",
@@ -55,10 +57,12 @@
 		"@types/express": "^4.17.17",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"markdown-it": "^13.0.1",
 		"next-auth": "^4.20.1",
 		"node-cache": "^5.1.2",
 		"node-cron": "^3.0.2",
 		"nodemon": "^2.0.21",
+		"sanitize-html": "^2.11.0",
 		"svelte-modals": "^1.2.1",
 		"ts-node": "^10.9.1",
 		"zod": "^3.20.6"
