--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ AUTHENTIK_TOKEN = 'aaasDJKASJDHSAJKHDLOIJASHDIABDSKJASJKDJKAS'
 ORIGIN = "https://dev.example.com"
 
 DISCORD_NOTIFICATION_WEBHOOK = "https://discord.com/api/webhooks/server/key"
+DISCORD_IBS_WEBHOOK = "https://discord.com/api/webhooks/server/key"
+
 
 UPLOAD_FOLDER=./static/upload
 PUBLIC_UPLOAD_URL=/upload/
