--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/kit": "^1.15.2",
 		"@types/markdown-it": "^12.2.3",
+		"@types/markdown-it-emoji": "^2.0.2",
 		"@types/minio": "^7.0.17",
 		"@types/node-cron": "^3.0.7",
 		"@types/sanitize-html": "^2.9.0",
@@ -58,6 +59,10 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"markdown-it": "^13.0.1",
+		"markdown-it-emoji": "^2.0.2",
+		"markdown-it-ins": "^3.0.1",
+		"markdown-it-sub": "^1.0.0",
+		"markdown-it-sup": "^1.0.0",
 		"next-auth": "^4.20.1",
 		"node-cache": "^5.1.2",
 		"node-cron": "^3.0.2",
