env: Add NODE_ENV, EMAIL_REPLY_TO AND EMAIL_IBS_LOGO

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+NODE_ENV = development
+
 # SvelteKit ENV
 ORIGIN = "https://dev.oddinvictus.nl"
 PROTOCOL_HEADER=x-forwarded-proto
@@ -36,6 +38,7 @@ EMAIL_DOMAIN = "example.com"
 EMAIL_SENDER = "Invictus Bier Systeem <ibs@example.com>"
 EMAIL_BACKEND_SENDER = "IBS Backend <ibs.backend@example.com>"
 ADMIN_EMAIL = "Admin <admin@example.com>"
+EMAIL_REPLY_TO = "Senaat <senaat@example.com>"
 
 # Email SMTP
 SMTP_HOST = "smtp.example.com"
@@ -47,3 +50,4 @@ CRONTAB_LDAP=0 6 * * *
 CRONTAB_EMAIL=0 7 * * *
 
 IBS_URL="https://example.com"
+EMAIL_IBS_LOGO=https://static.example.com/ibs_logo_v2.png
