--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,15 @@
   },
   "homepage": "https://github.com/ODDInvictus/ibs3#readme",
   "dependencies": {
+    "@types/email-templates": "^10.0.1",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "email-templates": "^11.1.1",
     "express": "^4.18.2",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.3",
-    "prisma": "^4.9.0"
+    "prisma": "^4.9.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
