bug: Actually send a notification when a new activity has been made

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ PROTOCOL_HEADER=x-forwarded-proto
 HOST_HEADER=x-forwarded-host
 
 DATABASE_URL="mysql://ibs3:password@mariadb:3306/ibs3?schema=public"
+BACKEND_URL="http://localhost:3000"
 
 IBS_CLIENT_ID = "CLIENT_ID"
 IBS_CLIENT_SECRET = "CLIENT_SECRET"
