--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
 	"devDependencies": {
 		"@iconify/json": "^2.2.47",
 		"@popperjs/core": "^2.11.6",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/adapter-node": "^1.2.3",
-		"@sveltejs/kit": "^1.15.2",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/kit": "^1.22.3",
 		"@types/express": "^4.17.17",
 		"@types/markdown-it": "^12.2.3",
 		"@types/markdown-it-emoji": "^2.0.2",
 		"@types/minio": "^7.0.17",
 		"@types/node-cron": "^3.0.7",
 		"@types/sanitize-html": "^2.9.0",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@typescript-eslint/eslint-plugin": "^6.2.0",
+		"@typescript-eslint/parser": "^6.2.0",
 		"autoprefixer": "^10.4.13",
 		"classnames": "^2.3.2",
 		"concurrently": "^7.6.0",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint": "^8.45.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-svelte": "^2.32.4",
 		"flowbite": "^1.6.3",
 		"flowbite-svelte": "^0.29.12",
 		"nodemon": "^3.0.1",
@@ -43,23 +43,22 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"prisma": "^4.10.1",
+		"prisma": "^5.0.0",
 		"sass": "^1.58.0",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"svelte-hamburgers": "^4.0.1",
-		"svelte-preprocess": "^4.10.7",
+		"svelte": "^4.1.1",
+		"svelte-check": "^3.4.6",
+		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.2.4",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
+		"typescript": "^5.1.6",
 		"unplugin-icons": "^0.16.1",
 		"vite": "^4.0.5"
 	},
 	"type": "module",
 	"dependencies": {
-		"@auth/sveltekit": "^0.2.0",
-		"@prisma/client": "^4.9.0",
+		"@auth/sveltekit": "^0.3.6",
+		"@prisma/client": "^5.0.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"markdown-it": "^13.0.1",
@@ -69,7 +68,7 @@
 		"markdown-it-smartarrows": "^1.0.1",
 		"markdown-it-sub": "^1.0.0",
 		"markdown-it-sup": "^1.0.0",
-		"next-auth": "^4.20.1",
+		"next-auth": "^4.22.3",
 		"node-cache": "^5.1.2",
 		"sanitize-html": "^2.11.0",
 		"svelte-modals": "^1.2.1",
