--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"devDependencies": {
 		"@iconify/json": "^2.2.47",
+		"@iconify/svelte": "^3.1.4",
 		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-node": "^1.3.1",
@@ -26,11 +27,11 @@
 		"@types/markdown-it": "^12.2.3",
 		"@types/markdown-it-emoji": "^2.0.2",
 		"@types/minio": "^7.0.17",
+		"@types/node": "^20.4.5",
 		"@types/node-cron": "^3.0.7",
 		"@types/sanitize-html": "^2.9.0",
 		"@typescript-eslint/eslint-plugin": "^6.2.0",
 		"@typescript-eslint/parser": "^6.2.0",
-		"autoprefixer": "^10.4.13",
 		"classnames": "^2.3.2",
 		"concurrently": "^7.6.0",
 		"eslint": "^8.45.0",
@@ -39,7 +40,7 @@
 		"flowbite": "^1.6.3",
 		"flowbite-svelte": "^0.29.12",
 		"nodemon": "^3.0.1",
-		"postcss": "^8.4.21",
+		"postcss": "^8.4.27",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
@@ -48,7 +49,6 @@
 		"svelte": "^4.1.1",
 		"svelte-check": "^3.4.6",
 		"svelte-preprocess": "^5.0.4",
-		"tailwindcss": "^3.2.4",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.1.6",
@@ -59,6 +59,7 @@
 	"dependencies": {
 		"@auth/sveltekit": "^0.3.6",
 		"@prisma/client": "^5.0.0",
+		"autoprefixer": "^10.4.14",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"markdown-it": "^13.0.1",
