--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,8 @@ CRONTAB_EMAIL=0 7 * * *
 
 IBS_URL="https://example.com"
 EMAIL_IBS_LOGO=https://static.example.com/ibs_logo_v2.png
+
+# Spotify
+SPOTIFY_CLIENT_ID = "CLIENT_ID"
+SPOTIFY_CLIENT_SECRET = "CLIENT_SECRET"
+SPOTIFY_REDIRECT_URI = "http://localhost:5173/playlist"
