feat: Render plaintext version of markdown

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"markdown-it-emoji": "^2.0.2",
 		"markdown-it-ins": "^3.0.1",
 		"markdown-it-kbd": "^2.2.2",
+		"markdown-it-plain-text": "^0.3.0",
 		"markdown-it-smartarrows": "^1.0.1",
 		"markdown-it-sub": "^1.0.0",
 		"markdown-it-sup": "^1.0.0",
