--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,5 @@ CRONTAB_EMAIL=0 7 * * *
 
 IBS_URL="https://example.com"
 EMAIL_IBS_LOGO=https://static.example.com/ibs_logo_v2.png
+
+QUOTE_API_URL = https://example.com
