--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte": "^2.32.4",
+		"ioredis": "^5.3.2",
 		"nodemon": "^3.0.1",
 		"postcss": "^8.4.27",
 		"postcss-load-config": "^4.0.1",
@@ -70,6 +71,7 @@
 		"markdown-it-sup": "^1.0.0",
 		"next-auth": "^4.22.3",
 		"node-cache": "^5.1.2",
+		"sharp": "^0.32.4",
 		"svelte-modals": "^1.2.1",
 		"xss": "^1.0.14",
 		"zod": "^3.20.6"
