--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/node-cron": "^3.0.7",
 		"@typescript-eslint/eslint-plugin": "^6.2.0",
 		"@typescript-eslint/parser": "^6.2.0",
+		"@vite-pwa/sveltekit": "^0.2.5",
 		"classnames": "^2.3.2",
 		"concurrently": "^7.6.0",
 		"eslint": "^8.45.0",
