misc: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 static/upload/
 !static/upload/activities/bier.jpg
+static/fotos/
 
 # Logs
 logs
