--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,9 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
     "prisma": "^5.0.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "redis": "^4.6.7",
+    "sharp": "^0.32.5"
   },
   "devDependencies": {
     "@types/email-templates": "^10.0.1",
