--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
 		"@auth/sveltekit": "^0.3.6",
 		"@prisma/client": "^5.0.0",
 		"autoprefixer": "^10.4.14",
+		"csv-parser": "^3.0.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"filereader": "^0.10.3",
 		"markdown-it": "^13.0.1",
 		"markdown-it-emoji": "^2.0.2",
 		"markdown-it-ins": "^3.0.1",
@@ -77,6 +79,7 @@
 		"sanitize-html": "^2.11.0",
 		"sharp": "^0.32.4",
 		"spotify-web-api-node": "^5.0.2",
+		"stream-to-async-iterator": "^1.0.0",
 		"svelte-modals": "^1.2.1",
 		"xss": "^1.0.14",
 		"zod": "^3.20.6"
