Eerste penningmeester dingen onder /ongeveer, banktransacties uploaden, banktransacties mathcen

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,6 @@ EMAIL_IBS_LOGO=https://static.example.com/ibs_logo_v2.png
 SPOTIFY_CLIENT_SECRET = "CLIENT_SECRET"
 
 QUOTE_API_URL = https://example.com
+
+# Financieel
+PUBLIC_IBAN = "NL00 RABO 0000 0000 00"
