--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"@ory/cli": "^0.2.2",
 		"@ory/client": "^1.2.11",
 		"@prisma/client": "^5.0.0",
+		"@total-typescript/ts-reset": "^0.5.1",
 		"autoprefixer": "^10.4.14",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
