--- a/package.json
+++ b/package.json
@@ -51,11 +51,14 @@
 		"svelte-check": "^3.4.6",
 		"svelte-floating-ui": "^1.5.3",
 		"svelte-preprocess": "^5.0.4",
+		"sveltekit-flash-message": "^2.2.1",
+		"sveltekit-superforms": "^1.8.0",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.1.6",
 		"unplugin-icons": "^0.16.1",
-		"vite": "^4.4.9"
+		"vite": "^4.4.9",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
@@ -82,7 +85,6 @@
 		"spotify-web-api-node": "^5.0.2",
 		"stream-to-async-iterator": "^1.0.0",
 		"svelte-modals": "^1.2.1",
-		"xss": "^1.0.14",
-		"zod": "^3.20.6"
+		"xss": "^1.0.14"
 	}
 }
