--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.0",
 		"@types/express": "^4.17.17",
+		"@types/gridfs-stream": "^0.5.39",
 		"@types/markdown-it": "^12.2.3",
 		"@types/markdown-it-emoji": "^2.0.2",
 		"@types/minio": "^7.0.17",
@@ -58,8 +59,8 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.1.6",
 		"unplugin-icons": "^0.16.1",
-		"zod": "^3.22.4",
-		"vite": "^4.4.12"
+		"vite": "^4.4.12",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
@@ -72,6 +73,7 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"filereader": "^0.10.3",
+		"gridfs-stream": "^1.1.1",
 		"markdown-it": "^13.0.1",
 		"markdown-it-emoji": "^2.0.2",
 		"markdown-it-ins": "^3.0.1",
@@ -80,11 +82,12 @@
 		"markdown-it-smartarrows": "^1.0.1",
 		"markdown-it-sub": "^1.0.0",
 		"markdown-it-sup": "^1.0.0",
+		"mongodb": "^6.5.0",
 		"next-auth": "^4.24.5",
 		"node-cache": "^5.1.2",
 		"sanitize-html": "^2.11.0",
-		"simple-svelte-autocomplete": "^2.5.2",
 		"sharp": "^0.32.6",
+		"simple-svelte-autocomplete": "^2.5.2",
 		"spotify-web-api-node": "^5.0.2",
 		"stream-to-async-iterator": "^1.0.0",
 		"svelte-modals": "^1.2.1",
