--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ HOST_HEADER=x-forwarded-host
 
 DATABASE_URL="mysql://ibs3:password@mariadb:3306/ibs3?schema=public"
 BACKEND_URL="http://localhost:3000"
+MONGO_URI="mongodb+srv://ibs3:password@host/?retryWrites=true&w=majority&appName=ibs3"
+MONGO_DB_NAME="ibs3"
 
 IBS_CLIENT_ID = "CLIENT_ID"
 IBS_CLIENT_SECRET = "CLIENT_SECRET"
