--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"format": "prettier --plugin-search-dir . --write .",
 		"log": "git log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit",
 		"mailhog": "docker run --rm -it -p 1025:1025 -p 8025:8025 --name mailhog mailhog/mailhog",
-		"data-migration:attending": "ts-node-esm ./prisma/migrations/20231228173512_attending/data-migration.ts"
+		"data-migration:attending": "ts-node-esm ./prisma/migrations/20231228173512_attending/data-migration.ts",
+		"prepare": "husky install"
 	},
 	"devDependencies": {
 		"@floating-ui/core": "^1.4.1",
@@ -40,7 +41,9 @@
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte": "^2.32.4",
+		"husky": "^9.0.11",
 		"ioredis": "^5.3.2",
+		"lint-staged": "^15.2.2",
 		"nodemon": "^3.0.1",
 		"postcss": "^8.4.31",
 		"postcss-load-config": "^4.0.1",
@@ -90,5 +93,9 @@
 		"stream-to-async-iterator": "^1.0.0",
 		"svelte-modals": "^1.2.1",
 		"xss": "^1.0.14"
+	},
+	"lint-staged": {
+		"*.js": "eslint --cache --fix",
+		"*.{js,css,md}": "prettier --write"
 	}
 }
