#249 - Add git-format-staged

--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte": "^2.32.4",
-		"husky": "^9.0.11",
+		"git-format-staged": "^3.1.1",
+		"husky": "^8.0.0",
 		"ioredis": "^5.3.2",
-		"lint-staged": "^15.2.2",
 		"nodemon": "^3.0.1",
 		"postcss": "^8.4.31",
 		"postcss-load-config": "^4.0.1",
@@ -93,8 +93,5 @@
 		"stream-to-async-iterator": "^1.0.0",
 		"svelte-modals": "^1.2.1",
 		"xss": "^1.0.14"
-	},
-	"lint-staged": {
-		"*.{js,svelte,ts,css,md,scss}": "prettier --write"
 	}
 }
