--- a/package.json
+++ b/package.json
@@ -39,16 +39,16 @@
 		"classnames": "^2.3.2",
 		"concurrently": "^7.6.0",
 		"eslint": "^8.45.0",
-		"eslint-config-prettier": "^8.8.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.32.4",
-		"git-format-staged": "^3.1.1",
 		"husky": "^8.0.0",
 		"ioredis": "^5.3.2",
 		"nodemon": "^3.0.1",
 		"postcss": "^8.4.31",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.2",
+		"pretty-quick": "^4.0.0",
 		"prisma": "^5.0.0",
 		"sass": "^1.58.0",
 		"svelte": "^4.1.1",
