--- a/package.json
+++ b/package.json
@@ -1,96 +1,101 @@
 {
-	"name": "ibs3",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev:backend": "nodemon --watch backend -e ts --exec \"ts-node-esm ./backend/index.ts\"",
-		"dev:frontend": "vite dev --host 0.0.0.0",
-		"dev:email-templates": "npx sass --watch ./emails/scss/style-test.sass ./build/css/style-test.css",
-		"dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"log": "git log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit",
-		"mailhog": "docker run --rm -it -p 1025:1025 -p 8025:8025 --name mailhog mailhog/mailhog",
-		"data-migration:attending": "ts-node-esm ./prisma/migrations/20231228173512_attending/data-migration.ts",
-		"prepare": "husky install"
-	},
-	"devDependencies": {
-		"@floating-ui/core": "^1.4.1",
-		"@iconify/json": "^2.2.47",
-		"@iconify/svelte": "^3.1.4",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.27.0",
-		"@types/express": "^4.17.17",
-		"@types/markdown-it": "^12.2.3",
-		"@types/markdown-it-emoji": "^2.0.2",
-		"@types/node": "^20.10.5",
-		"@types/node-cron": "^3.0.7",
-		"@types/sanitize-html": "^2.9.0",
-		"@types/spotify-web-api-node": "^5.0.7",
-		"@typescript-eslint/eslint-plugin": "^6.2.0",
-		"@typescript-eslint/parser": "^6.2.0",
-		"@vite-pwa/sveltekit": "^0.2.5",
-		"classnames": "^2.3.2",
-		"concurrently": "^7.6.0",
-		"eslint": "^8.45.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.32.4",
-		"husky": "^8.0.3",
-		"ioredis": "^5.3.2",
-		"nodemon": "^3.0.1",
-		"postcss": "^8.4.31",
-		"postcss-load-config": "^4.0.1",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.2",
-		"pretty-quick": "^4.0.0",
-		"prisma": "^5.0.0",
-		"sass": "^1.58.0",
-		"svelte": "^4.1.1",
-		"svelte-check": "^3.4.6",
-		"svelte-floating-ui": "^1.5.3",
-		"svelte-preprocess": "^5.0.4",
-		"sveltekit-flash-message": "^2.2.1",
-		"sveltekit-superforms": "^1.8.0",
-		"ts-node": "^10.9.1",
-		"tslib": "^2.4.1",
-		"typescript": "^5.1.6",
-		"unplugin-icons": "^0.16.1",
-		"vite": "^4.4.12",
-		"zod": "^3.22.4"
-	},
-	"type": "module",
-	"dependencies": {
-		"@auth/sveltekit": "^0.3.6",
-		"@prisma/client": "^5.0.0",
-		"@total-typescript/ts-reset": "^0.5.1",
-		"autoprefixer": "^10.4.14",
-		"csv-parser": "^3.0.0",
-		"decimal.js": "^10.4.3",
-		"dotenv": "^16.3.1",
-		"express": "^4.18.2",
-		"filereader": "^0.10.3",
-		"markdown-it": "^13.0.1",
-		"markdown-it-emoji": "^2.0.2",
-		"markdown-it-ins": "^3.0.1",
-		"markdown-it-kbd": "^2.2.2",
-		"markdown-it-plain-text": "^0.3.0",
-		"markdown-it-smartarrows": "^1.0.1",
-		"markdown-it-sub": "^1.0.0",
-		"markdown-it-sup": "^1.0.0",
-		"mongodb": "^6.5.0",
-		"next-auth": "^4.24.5",
-		"node-cache": "^5.1.2",
-		"sanitize-html": "^2.11.0",
-		"sharp": "^0.32.6",
-		"simple-svelte-autocomplete": "^2.5.2",
-		"spotify-web-api-node": "^5.0.2",
-		"stream-to-async-iterator": "^1.0.0",
-		"svelte-modals": "^1.2.1",
-		"xss": "^1.0.14"
-	}
+  "name": "ibs3",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev:backend": "nodemon --watch backend -e ts --exec \"ts-node-esm ./backend/index.ts\"",
+    "dev:frontend": "vite dev --host 0.0.0.0",
+    "dev:email-templates": "npx sass --watch ./emails/scss/style-test.sass ./build/css/style-test.css",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write .",
+    "log": "git log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit",
+    "mailhog": "docker run --rm -it -p 1025:1025 -p 8025:8025 --name mailhog mailhog/mailhog",
+    "data-migration:attending": "ts-node-esm ./prisma/migrations/20231228173512_attending/data-migration.ts",
+    "prepare": "husky install",
+    "test": "npm run test:frontend",
+    "test:init": "python ./e2e/init.py",
+    "test:frontend": "echo TODO",
+    "test:start:frontend": "vite dev --mode test"
+  },
+  "devDependencies": {
+    "@floating-ui/core": "^1.4.1",
+    "@iconify/json": "^2.2.47",
+    "@iconify/svelte": "^3.1.4",
+    "@playwright/test": "^1.43.0",
+    "@sveltejs/adapter-auto": "^2.1.0",
+    "@sveltejs/adapter-node": "^1.3.1",
+    "@sveltejs/kit": "^1.27.0",
+    "@types/express": "^4.17.17",
+    "@types/markdown-it": "^12.2.3",
+    "@types/markdown-it-emoji": "^2.0.2",
+    "@types/node": "^20.10.5",
+    "@types/node-cron": "^3.0.7",
+    "@types/sanitize-html": "^2.9.0",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "@vite-pwa/sveltekit": "^0.2.5",
+    "classnames": "^2.3.2",
+    "concurrently": "^7.6.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.32.4",
+    "husky": "^8.0.3",
+    "ioredis": "^5.3.2",
+    "nodemon": "^3.0.1",
+    "postcss": "^8.4.31",
+    "postcss-load-config": "^4.0.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.2",
+    "pretty-quick": "^4.0.0",
+    "prisma": "^5.0.0",
+    "sass": "^1.58.0",
+    "svelte": "^4.1.1",
+    "svelte-check": "^3.4.6",
+    "svelte-floating-ui": "^1.5.3",
+    "svelte-preprocess": "^5.0.4",
+    "sveltekit-flash-message": "^2.2.1",
+    "sveltekit-superforms": "^1.8.0",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.1",
+    "typescript": "^5.1.6",
+    "unplugin-icons": "^0.16.1",
+    "vite": "^4.4.12",
+    "zod": "^3.22.4"
+  },
+  "type": "module",
+  "dependencies": {
+    "@auth/sveltekit": "^0.3.6",
+    "@prisma/client": "^5.0.0",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "autoprefixer": "^10.4.14",
+    "csv-parser": "^3.0.0",
+    "decimal.js": "^10.4.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "filereader": "^0.10.3",
+    "markdown-it": "^13.0.1",
+    "markdown-it-emoji": "^2.0.2",
+    "markdown-it-ins": "^3.0.1",
+    "markdown-it-kbd": "^2.2.2",
+    "markdown-it-plain-text": "^0.3.0",
+    "markdown-it-smartarrows": "^1.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "mongodb": "^6.5.0",
+    "next-auth": "^4.24.5",
+    "node-cache": "^5.1.2",
+    "sanitize-html": "^2.11.0",
+    "sharp": "^0.32.6",
+    "simple-svelte-autocomplete": "^2.5.2",
+    "spotify-web-api-node": "^5.0.2",
+    "stream-to-async-iterator": "^1.0.0",
+    "svelte-modals": "^1.2.1",
+    "xss": "^1.0.14"
+  }
 }
