--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
 		"svelte": "^4.1.1",
 		"svelte-check": "^3.4.6",
 		"svelte-floating-ui": "^1.5.3",
-		"svelte-preprocess": "^5.0.4",
+		"svelte-preprocess": "^5.1.3",
 		"sveltekit-flash-message": "^2.2.1",
 		"sveltekit-superforms": "^1.8.0",
 		"ts-node": "^10.9.1",
@@ -92,6 +92,7 @@
 		"next-auth": "^4.24.5",
 		"node-cache": "^5.1.2",
 		"sanitize-html": "^2.11.0",
+		"scss": "^0.2.4",
 		"sharp": "^0.32.6",
 		"simple-svelte-autocomplete": "^2.5.2",
 		"spotify-web-api-node": "^5.0.2",
