--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,7 @@
 NODE_ENV=test
-DATABASE_URL="mysql://root:root@127.0.0.1:4401/ibs3_test"
+DATABASE_URL="mysql://root:root@127.0.0.1:4401/ibs3_test?schema=public"
 REDIS_URL="redis://localhost:4402/0"
 REDIS_PORT=4402
-MONGO_URI="mongodb://localhost:4403/ibs3_test"
+MONGO_URI="mongodb+srv://nautdevroome:hjJP65LccRwo1pEy@ibs-dev.hozhj1p.mongodb.net/?retryWrites=true&w=majority&appName=ibs-dev"
+MONGO_DB_NAME="ibs-dev"
 DEBUG=pw:webserver
