fixed env situ (on linux at least) + added commands to run test outside docker

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NODE_ENV = development
+ENVIRONMENT = development
 
 # SvelteKit ENV
 ORIGIN = "https://dev.oddinvictus.nl"
@@ -27,7 +28,7 @@ UPLOAD_FOLDER=./static/upload
 PUBLIC_UPLOAD_URL=/upload/
 
 PUBLIC_GITHUB_LINK="https://github.com/ODDInvictus/ibs3"
-PUBLIC_VERSION="1.0.0"
+PUBLIC_VERSION="TEST VERSION"
 
 # Strafbakken
 COLOSSEUM_IP = "192.168."
