--- a/package.json
+++ b/package.json
@@ -17,10 +17,19 @@
     "mailhog": "docker run --rm -it -p 1025:1025 -p 8025:8025 --name mailhog mailhog/mailhog",
     "data-migration:attending": "ts-node-esm ./prisma/migrations/20231228173512_attending/data-migration.ts",
     "prepare": "husky install",
+
     "test": "npm run test:e2e",
     "test:e2e": "npm run docker-down:test && npm run docker-up:test",
     "docker-up:test": "docker compose -f docker-compose.test.yml up --force-recreate --build --abort-on-container-exit --exit-code-from ibs3",
-    "docker-down:test": "docker compose -f docker-compose.test.yml down"
+    "docker-down:test": "docker compose -f docker-compose.test.yml down",
+
+    "test:local:prepare": "playwright install && playwright install ms-edge && playwright install-deps",
+    "test:local": "npm run test:local:before && playwright test --ui && npm run test:local:after",
+    "test:local:before": "npm run build && npm run testEnv:before && npm run seed:test",
+    "testEnv:before": "cp .env .env.temp && cp .env.test .env",
+    "seed:test": "prisma migrate reset && tsx e2e/seed.ts",
+    "test:local:after": "npm run testEnv:after",
+    "testEnv:after": "cp .env.temp .env && rm .env.temp"
   },
   "devDependencies": {
     "@floating-ui/core": "^1.4.1",
@@ -42,6 +51,7 @@
     "@vite-pwa/sveltekit": "^0.2.5",
     "classnames": "^2.3.2",
     "concurrently": "^7.6.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.32.4",
@@ -77,7 +87,6 @@
     "autoprefixer": "^10.4.14",
     "csv-parser": "^3.0.0",
     "decimal.js": "^10.4.3",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "filereader": "^0.10.3",
     "markdown-it": "^13.0.1",
