Fix local test windows

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV = development
-ENVIRONMENT = development
+ENVIRONMENT = development # Set to 'test' to disable authentication during testing
 
 # SvelteKit ENV
 ORIGIN = "https://dev.oddinvictus.nl"
