--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ DATABASE_URL="mysql://ibs3:password@mariadb:3306/ibs3?schema=public"
 BACKEND_URL="http://localhost:3000"
 MONGO_URI="mongodb+srv://ibs3:password@host/?retryWrites=true&w=majority&appName=ibs3"
 MONGO_DB_NAME="ibs3"
+DISABLE_MONGO="false" # Set to 'true' to disable MongoDB
 
 IBS_CLIENT_ID = "CLIENT_ID"
 IBS_CLIENT_SECRET = "CLIENT_SECRET"
