Fixed remove test-ids outside test enviroment

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"test:local:prepare:windows": "playwright install && playwright install-deps",
 		"test:local:unix": "npm run test:local:before:unix && playwright test --ui && npm run test:local:after:unix",
 		"test:local:windows": "npm run test:local:before:windows && playwright test --ui && npm run test:local:after:windows",
-		"test:local:before:unix": "npm run build && npm run testEnv:before:unix && npm run seed:test",
-		"test:local:before:windows": "npm run build && npm run testEnv:before:windows && npm run seed:test",
+		"test:local:before:unix": "npm run testEnv:before:unix && npm run build && npm run seed:test",
+		"test:local:before:windows": "npm run testEnv:before:windows && npm run build && npm run seed:test",
 		"testEnv:before:unix": "cp .env .env.temp && cp .env.test .env",
 		"testEnv:before:windows": "copy .env .env.temp && copy .env.test .env",
 		"seed:test": "prisma migrate reset && tsx e2e/seed.ts",
