--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
 		"dotenv": "^16.0.3",
 		"email-templates": "^11.1.1",
 		"express": "^4.19.2",
+		"gridfs-promise": "^6.3.10",
 		"node-cron": "^3.0.2",
 		"nodemailer": "^6.9.13",
 		"prisma": "^5.0.0",
