--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"express": "^4.19.2",
 		"filereader": "^0.10.3",
 		"gridfs-promise": "^6.3.10",
+		"ics": "^3.7.6",
 		"markdown-it": "^13.0.1",
 		"markdown-it-emoji": "^2.0.2",
 		"markdown-it-ins": "^3.0.1",
