--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
 		"@types/email-templates": "^10.0.1",
 		"@types/express": "^4.17.17",
 		"@types/node": "^18.15.11",
+		"@types/node-cron": "^3.0.11",
 		"@types/nodemailer": "^6.4.8",
 		"concurrently": "^8.0.1",
 		"nodemon": "^2.0.22",
