deps: upgrade to prisma 7.2.0 and "prisma-client" generator, in which you cannot use @prisma/client anymore

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ vite.config.ts.timestamp-*
 static/upload/
 !static/upload/activities/bier.jpg
 static/fotos/
+src/lib/server/prisma
 
 # Logs
 logs
