--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,4 +1,4 @@
-FROM oven/bun:1.3.6-debian AS base
+FROM oven/bun:1.3.6 AS base
 WORKDIR /ibs3
 
 FROM base AS install
@@ -26,10 +26,8 @@ FROM base AS release
 COPY --from=install /temp/prod/node_modules ./node_modules
 COPY --from=install /temp/prod/prisma ./prisma
 COPY --from=prerelease /ibs3/package.json .
-COPY server.js .
 COPY build ./build
 
 USER bun
 EXPOSE 3000/tcp
-# ENTRYPOINT [ "ls", "-la", "node_modules/.prisma/client" ]
 ENTRYPOINT [ "bun", "--bun", "run", "./build/index.js" ]
