--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@types/markdown-it-emoji": "^2.0.2",
 		"@types/node": "^20.10.5",
 		"@types/node-cron": "^3.0.7",
+		"@types/nodemailer": "^7.0.5",
 		"@types/sanitize-html": "^2.9.0",
 		"@types/spotify-web-api-node": "^5.0.7",
 		"@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -63,6 +64,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.32.4",
 		"ioredis": "^5.3.2",
+		"nodemailer": "^7.0.12",
 		"nodemon": "^3.0.1",
 		"postcss": "^8.4.31",
 		"postcss-load-config": "^4.0.1",
@@ -90,6 +92,7 @@
 	"type": "module",
 	"dependencies": {
 		"@auth/sveltekit": "^1.10.0",
+		"@aws-sdk/client-ses": "^3.972.0",
 		"@prisma/adapter-mariadb": "^7.2.0",
 		"@prisma/client": "7.2.0",
 		"@total-typescript/ts-reset": "^0.5.1",
@@ -118,6 +121,7 @@
 		"simple-svelte-autocomplete": "^2.5.2",
 		"spotify-web-api-node": "^5.0.2",
 		"stream-to-async-iterator": "^1.0.0",
+		"svelte-email": "^0.0.4",
 		"svelte-modals": "v1.2.0",
 		"xss": "^1.0.14"
 	},
