deps: upgrade prisma to 7.3.0

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
 		"pretty-quick": "^4.0.0",
-		"prisma": "^7.2.0",
+		"prisma": "7.3.0",
 		"sass": "^1.97.2",
 		"scss": "^0.2.4",
 		"svelte": "4.2.20",
@@ -95,7 +95,7 @@
 		"@auth/sveltekit": "^1.10.0",
 		"@aws-sdk/client-ses": "^3.972.0",
 		"@prisma/adapter-mariadb": "^7.2.0",
-		"@prisma/client": "7.2.0",
+		"@prisma/client": "7.3.0",
 		"@total-typescript/ts-reset": "^0.5.1",
 		"autoprefixer": "^10.4.14",
 		"csv-parser": "^3.0.0",
